// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`render should render component 1`] = `
<section>
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "sections": [
          {
            "content": [],
            "name": "One",
          },
          {
            "content": [],
            "name": "Two",
          },
        ],
      }
    }
  />
</section>
`;

exports[`render should render styled component 1`] = `
<SectionsRenderer
  classes={
    {
      "root": "rsg--root-0",
    }
  }
>
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "sections": [
          {
            "content": [],
            "name": "One",
          },
          {
            "content": [],
            "name": "Two",
          },
        ],
      }
    }
  />
</SectionsRenderer>
`;

exports[`should render component renderer 1`] = `
<Styled(Sections)>
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "<button>OK</button>",
            "evalInContext": [Function],
            "type": "code",
          },
        ],
        "name": "Foo",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "components": [],
        "content": [
          {
            "content": "Hello *world*!",
            "type": "markdown",
          },
        ],
        "name": "Bar",
      }
    }
  />
  <Section
    depth={3}
    section={
      {
        "sections": [
          {
            "content": [],
            "name": "One",
          },
          {
            "content": [],
            "name": "Two",
          },
        ],
      }
    }
  />
</Styled(Sections)>
`;
